--- a/apresentacao.org
+++ b/apresentacao.org
@@ -68,40 +68,6 @@
    | *Passo 2.2.* | T_0 \mid T_1 \mid T_2 \mid T_3 \leftarrow T_1 \mid T_2 \mid T_3 \mid T_0 |
    | *Passo 3.*   | Y_0 \mid Y_1 \mid Y_2 \mid Y_3 \leftarrow T_3 \mid T_0 \mid T_1 \mid T_2 |
 
-** Nossa implementacao GFN-4
-
-   \begin{verbatim}
-      void gfn4(int r, unsigned int* rk, 
-                unsigned int *x, unsigned int *y) {
-        int i;
-        unsigned int temp;
-        /* Step 1 */
-        unsigned int t0 = x[0];
-        unsigned int t1 = x[1];
-        unsigned int t2 = x[2];
-        unsigned int t3 = x[3];
-        /* Step 2 */
-        for (i = 0; i < r; i++) {
-          /* Step 2.1 */
-          t1 ^= f0(rk[2*i], t0);
-          t3 ^= f1(rk[2*i + 1], t2);    
-          /* Step 2.2 */
-          temp = t0;
-          t0 = t1;
-          t1 = t2;
-          t2 = t3;
-          t3 = temp;
-        }
-   \end{verbatim}
-   \begin{verbatim}
-        /* Step 3 */
-        y[0] = t3;
-        y[1] = t0;
-        y[2] = t1;
-        y[3] = t2;  
-      }
-   \end{verbatim}
-
 ** Generalized Feistel Network 8-branch
 
    | *GFN_{8,r}(RK_{0}, ..., RK_{4r-1}, X_0, X_1, ..., X_7)* |
@@ -119,52 +85,6 @@
    | *Passo 2.2.* | T_0 \mid T_1 \mid ... \mid T_6 \mid T_7 \leftarrow T_1 \mid T_2 \mid ... \mid T_7 \mid T_0 |
    | *Passo 3.* | Y_0 \mid Y_1 \mid ... \mid Y_6 \mid Y_7 \leftarrow T_7 \mid T_0 \mid ... \mid   T_5 \mid T_6 |
 
-** Nossa implementacao GFN-4
-   
-   \begin{verbatim}
-       void gfn8(int r, unsigned int* rk, 
-                 unsigned int *x, unsigned int *y) {
-      int i;
-      unsigned int temp;
-      /* Step 1 */
-      unsigned int t0 = x[0];
-      unsigned int t1 = x[1];
-      unsigned int t2 = x[2];
-      unsigned int t3 = x[3];
-      unsigned int t4 = x[4];
-      unsigned int t5 = x[5];
-      unsigned int t6 = x[6];
-      unsigned int t7 = x[7];
-      /* Step 2 */
-      for (i = 0; i < r; i++) {
-        /* Step 2.1 */
-        t1 ^= f0(rk[4*i], t0);
-        t3 ^= f1(rk[4*i + 1], t2);    
-        t5 ^= f0(rk[4*1 + 2], t4);
-        t7 ^= f1(rk[4*i + 3], t6);
-        /* Step 2.2 */
-        temp = t0;
-        t0 = t1;
-        t1 = t2;
-        t2 = t3;
-        t3 = t4;
-        t4 = t5;
-        t5 = t6;
-        t6 = t7;
-        t7 = temp;
-      }
-      /* Step 3 */
-      y[0] = t7;
-      y[1] = t0;
-      y[2] = t1;
-      y[3] = t2;
-      y[4] = t3;
-      y[5] = t4;
-      y[6] = t5;
-      y[7] = t6;    
-    }
-   \end{verbatim}
-   
 ** Generalized Feistel Network 4-branch inversa
 
    | *GFNINV_{4,r}(RK_{0}, ..., RK_{2r-1}, X_0, X_1, X_2, X_3)* |
@@ -282,11 +202,11 @@
     
 ** Algoritmo de encriptação
 
-   | *Entrada*: | bloco plain :      | P = \{P_0, P_1, P_2, P_3\}, P_i tem 32 bits                          |
+   | *Entrada*: | bloco plain :      | P = \{P_0, P_1, P_2, P_3\}                         |
    |            | numero de rounds : | r tem 32 bits                                                        |
-   |            | rounds keys :      | RK = \{RK_{0}, ..., RK_{2r-1}\}, RK_i tem 32 bits                    |
-   |            | whitening keys :   | WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\},            WK_i tem 32 bits |
-   | *Saída*:   | bloco cifrado :    | C = \{C_0, C_1, C_2, C_3\}, C_i tem 32 bits                          |
+   |            | rounds keys :      | RK = \{RK_{0}, ..., RK_{2r-1}\}                |
+   |            | whitening keys :   | WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\} |
+   | *Saída*:   | bloco cifrado :    | C = \{C_0, C_1, C_2, C_3\}                        |
 
    | *Passo 1.* | T_0 \mid T_1 \mid T_2 \mid T_3 \leftarrow P0 \mid (P1 \oplus WK0) \mid P2 \mid (P3 \oplus WK1)  |
    | *Passo 2.* | T_0 \mid T_1 \mid T_2 \mid T_3 \leftarrow GFN_{4,r}(RK_{0}, ..., RK_{2r-1}, T_0, T_1, T_2, T_3) |
@@ -294,11 +214,11 @@
 
 ** Algoritmo de desencriptação
 
-   | *Entrada*: | bloco plain :      | C = \{C_0, C_1, C_2, C_3\}, C_i tem 32 bits                |
+   | *Entrada*: | bloco plain :      | C = \{C_0, C_1, C_2, C_3\}            |
    |            | numero de rounds : | r tem 32 bits                                              |
-   |            | rounds keys :      | RK = \{RK_{0}, ..., RK_{2r-1}\}, RK_i tem 32 bits          |
-   |            | whitening keys :   | WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\},  WK_i tem 32 bits |
-   | *Saída*:   | bloco cifrado :    | P = \{P_0, P_1, P_2, P_3\}, P_i tem 32 bits                |
+   |            | rounds keys :      | RK = \{RK_{0}, ..., RK_{2r-1}\}         |
+   |            | whitening keys :   | WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\} |
+   | *Saída*:   | bloco cifrado :    | P = \{P_0, P_1, P_2, P_3\}          |
    
    | *Passo 1.* | T_0 \mid T_1 \mid T_2 \mid T_3 \leftarrow C_0 \mid (C_1 \oplus WK2) \mid C_2 \mid (C_3 \oplus WK3)                 |
    | *Passo 2.* | T_0 \mid T_1 \mid T_2 \mid T_3                 \leftarrow GFNINV_{4,r}(RK_{0}, ..., RK_{2r-1}, T_0, T_1, T_2, T_3) |
@@ -326,9 +246,9 @@
 
 ** Geração de chaves para o modo 128 bits
 
-   | *Entrada*: | chave :          | K = \{k_0, k_1, K_2, k_3}, k_i tem 32 bits                  |
-   | *Saida*:   | rounds keys :    | RK = \{RK_{0}, ..., RK_{35}\}, RK_i tem 32 bits             |
-   |            | whitening keys : | WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\},   WK_i tem 32 bits |
+   | *Entrada*: | chave :          | K = \{k_0, k_1, K_2, k_3}              |
+   | *Saida*:   | rounds keys :    | RK = \{RK_{0}, ..., RK_{35}\}           |
+   |            | whitening keys : | WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\} |
 
     | *Passo 1.* | L \leftarrow GFN_{4,12}(CON_128{0}, ..., CON_128{23}, K0, ..., K3)                                                     |
     | *Passo 2.* | WK0 \mid WK1 \mid WK2 \mid WK3 \leftarrow K                                                                            |
@@ -340,39 +260,35 @@
 
 ** Geração de chaves para o modo 192 e 256 bits
 
-    | *Entrada para K = 192*: | chave : k = \{k_0, k_1, K_2, k_3, k_4, k_5}, k_i tem 32 bits                       |
-    | *Saida para K = 192*:   | rounds keys : RK = \{RK_{0}, ..., RK_{43}\}, RK_i tem 32 bits                      |
-    |                         | whitening keys : WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\},         WK_i tem 32 bits |
-
-    | *Entrada para K = 256*: | chave : k = \{k_0, k_1, K_2, k_3, k_4, k_5, k_6, k_7}, k_i tem 32 bits      |
-    | *Saida para k = 256*: | rounds keys : RK = \{RK_{0}, ..., RK_{51}\}, RK_i tem 32 bits               |
-    |                       | whitening keys : WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\},  WK_i tem 32 bits |
-
-    | *Passo 1.* | k = 192 ou k = 256 |                                                                                                        |
-    | *Passo 2.* | If k = 192:        |                                                                                                        |
-    |            |                    | KL \leftarrow K0 \mid K1 \mid K2 \mid K3, KR \leftarrow K4 \mid K5 \mid \thicksim K0 \mid \thicksim K1 |
-    |            | else if k = 256 :  |                                                                                                        |
-    |            |                    | KL \leftarrow K0 \mid K1 \mid K2 \mid K3, KR \leftarrow K4 \mid K5 \mid K6 \mid K7                     |
+    | *Entrada para K = 192*: | chave : k = \{k_0, k_1, K_2, k_3, k_4, k_5}                       |                                                                                                        |
+    | *Saida para K = 192*:   | rounds keys : RK = \{RK_{0}, ..., RK_{43}\}                   |                                                                                                        |
+    |                         | whitening keys : WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\} |                                                                                                        |
+    | *Entrada para K = 256*: | chave : k = \{k_0, k_1, K_2, k_3, k_4, k_5, k_6, k_7}       |                                                                                                        |
+    | *Saida para k = 256*:   | rounds keys : RK = \{RK_{0}, ..., RK_{51}\}                     |                                                                                                        |
+    |                         | whitening keys : WK = \{WK_{0}, WK_{1}, WK_{2}, WK_{3}\}      |                                                                                                        |
+    | *Passo 1.*              | k = 192 ou k = 256                                                                 |                                                                                                        |
+    | *Passo 2.*              | If k = 192:                                                                        |                                                                                                        |
+    |                         |                                                                                    | KL \leftarrow K0 \mid K1 \mid K2 \mid K3, KR \leftarrow K4 \mid K5 \mid \thicksim K0 \mid \thicksim K1 |
+    |                         | else if k = 256 :                                                                  |                                                                                                        |
+    |                         |                                                                                    | KL \leftarrow K0 \mid K1 \mid K2 \mid K3, KR \leftarrow K4 \mid K5 \mid K6 \mid K7                     |
 
 ** Geração de chaves para o modo 192 e 256 bits
 
-    | *Passo 3.* | Let KL = KL0 \mid KL1 \mid KL2 \mid KL3                                                   |   |
-    |            | KR = KR0 \mid KR1 \mid KR2 \mid KR3                                                       |   |
-    |            | LL \mid LR \leftarrow GFN_{8,10}(CON_k{0} , ..., CON_k{39}, KL0, ..., KL3, KR0, ..., KR3) |   |
-
-   | *Passo 4.* | WK0 \mid WK1 \mid WK2 \mid WK3 \leftarrow KL \oplus KR |
-
-   | *Passo 5.* | For i = 0 to 10 (if k = 192),                                                                                         |
-   |            | or 12 (if k = 256) do the following:                                                                                  |
-   |            | If (i mod 4) = 0 or 1:                                                                                                |
-   |            | \quad T \leftarrow LL \oplus (CON_k[40 + 4i] \mid CON_k[40 + 4i + 1] \mid CON_k[40 + 4i + 2] \mid CON_k[40 + 4i + 3]) |
-   |            | \quad LL \leftarrow Sigma(LL)                                                                                         |
-   |            | if i is odd:                                                                                                          |
-   |            | \quad T \leftarrow T \oplus KR                                                                                        |
-   |            | else:                                                                                                                 |
-   |            | \quad T \leftarrow LR \oplus (CON_k[40 + 4i] \mid CON_k[40 + 4i + 1] \mid CON_k[40 + 4i + 2] \mid CON_k[40 + 4i + 3]) |
-   |            | \quad LR \leftarrow Sigma(LR)                                                                                         |
-   |            | if i is odd: T \leftarrow T \oplus KL                                                                                 |
+    | *Passo 3.* | Let KL = KL0 \mid KL1 \mid KL2 \mid KL3                                                                               |
+    |            | KR = KR0 \mid KR1 \mid KR2 \mid KR3                                                                                   |
+    |            | LL \mid LR \leftarrow GFN_{8,10}(CON_k{0} , ..., CON_k{39}, KL0, ..., KL3, KR0, ..., KR3)                             |
+    | *Passo 4.* | WK0 \mid WK1 \mid WK2 \mid WK3 \leftarrow KL \oplus KR                                                                |
+    | *Passo 5.* | For i = 0 to 10 (if k = 192),                                                                                         |
+    |            | or 12 (if k = 256) do the following:                                                                                  |
+    |            | If (i mod 4) = 0 or 1:                                                                                                |
+    |            | \quad T \leftarrow LL \oplus (CON_k[40 + 4i] \mid CON_k[40 + 4i + 1] \mid CON_k[40 + 4i + 2] \mid CON_k[40 + 4i + 3]) |
+    |            | \quad LL \leftarrow Sigma(LL)                                                                                         |
+    |            | if i is odd:                                                                                                          |
+    |            | \quad T \leftarrow T \oplus KR                                                                                        |
+    |            | else:                                                                                                                 |
+    |            | \quad T \leftarrow LR \oplus (CON_k[40 + 4i] \mid CON_k[40 + 4i + 1] \mid CON_k[40 + 4i + 2] \mid CON_k[40 + 4i + 3]) |
+    |            | \quad LR \leftarrow Sigma(LR)                                                                                         |
+    |            | if i is odd: T \leftarrow T \oplus KL                                                                                 |
    
    | RK_{4i} \mid RK_{4i + 1} \mid RK_{4i + 2} \mid RK_{4i + 3} \leftarrow T |
    
